# phased-flashing-lights

./: README.md  index.html  phased-flashing.css  phased-flashing.js
pico/: .gitignore  CMakeLists.txt  COPYING  develop.sh  flashing-lights.cpp  image-0.txt  image-1.txt  make_phis.py  pico7219.c  test_make_phis.py
web/: COPYING  include-livereload.html  index.md  make.sh  phased-flashing.css  phased-flashing.js  serve.sh  template.html
